--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,97 @@
+body {
+    font-family: sans-serif;
+    background-color: #275E9E;
+    color: white;
+    margin: 0px;
+    padding: 0px;
+}
 
-        html{
-            margin: none;
-            padding: none;
-        }
-        body {
-            font-family: sans-serif;
-            background-color: #275E9E;
-            max-height: 30vh;
-            color: white;
-            margin: none;
-            padding: none;
-        }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #1E1E1E;
-            padding: 10px;
-            width: 100%;
-        }
-        .navbar-title {
-            font-size: 24px;
-            font-weight: bold;
-            text-align: left;
-        }
-        .navbar-links {
-            display: flex;
-            color: white;
-        }
-        .navbar-link {
-            margin-right: 10px;
-            font-size: 20px;
-            text-decoration: none;
-            color: white;
-        }
-        .content {
-            text-align: center;
-            margin-top: 50px;
-        }
-        .search-input {
-            width: 300px;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 20px;
-            border-color: white;
-            
-        }
-        .search-icon {
-            margin-left: 10px;
-        }
-        .search-info {
-            margin-bottom: 10px;
-        }
-        .dropdown {
-            margin-bottom: 10px;
-        }
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1E1E1E;
+    padding: 10px;
+    
+}
 
-        #search-results {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-            background-color: #1E1E1E;
-        }
+.navbar-title {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.navbar-links {
+    display: flex;
+    color: white;
+}
+
+.navbar-link {
+    margin-right: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+}
+
+.content {
+    text-align: center;
+    margin-top: 50px;
+    min-height: 465px;
+}
+
+.search-input {
+    width: 300px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    border-color: white;
+    border-style: none;
+
+}
+
+.search-icon {
+    margin-left: 10px;
+}
+
+.search-info {
+    margin-bottom: 10px;
+}
+
+.dropdown-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+
+}
+
+.dropdown {
+    height: 25px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    border-color: white;
+    text-align: center;
+}
+
+button {
+    padding: 10px;
+    border-radius: 20px;
+    border-color: none;
+    background-color: #3d3d3d;
+    color: rgb(255, 255, 255);
+    border-style: none;
+    cursor: pointer;
+}
+
+#search-results {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+    background-color: #1E1E1E;
+    height: 100vh;
+}
