--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,53 @@ button {
 
 #search-results {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     margin-top: 20px;
     background-color: #1E1E1E;
+    padding: 20px; 
     height: 100vh;
+}
+
+.song {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 30vh;
+}
+
+.song p {
+    margin: 5px 0;
+}
+
+.song .title {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.song .artist {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.song .video {
+    width: 100%;
+    height: 200px;
+    background-color: #000;
+    margin-top: 10px;
+}
+
+.song .links {
+    margin-top: 10px;
+}
+
+.song .links a {
+    color: #1DB954; /* Spotify green color */
+    margin-right: 10px;
+    text-decoration: none;
 }
